# robotics-portfolio

./: .gitignore  README.md
01_6dof_arm/arm_controller/: package.xml  setup.py
01_6dof_arm/arm_controller/arm_controller/: arm_motion.py
01_6dof_arm/arm_description/: CMakeLists.txt  package.xml
01_6dof_arm/arm_description/launch/: display.launch.py
01_6dof_arm/arm_description/meshes/: link_3.stl  link_6.stl
01_6dof_arm/arm_description/urdf/: arm.urdf.xacro
01_6dof_arm/arm_moveit_config/: package.xml
01_6dof_arm/arm_moveit_config/config/: arm.srdf  joint_limits.yaml  ompl_planning.yaml
01_6dof_arm/arm_moveit_config/launch/: moveit.launch.py
01_6dof_arm/docs/: phase1_notes.md
01_6dof_arm/meshes/: base_link.stl
01_6dof_arm/onshape_export/: config.json  robot.urdf
01_6dof_arm/onshape_export/assets/: base_link.part  link_1.part  link_1.stl  link_2.part  link_3.part  link_4.part  link_4.stl  link_5.part  link_5.stl  link_6.part  part_1.part  part_1__2.part  part_1__3.part  part_1__3.stl  part_1__4.part  part_1__5.part  part_1__6.part  part_1__7.part
