<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration for arm_6dof</description>
  <maintainer email="hridayrana2408@gmail.com">hriday</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
